@@ -78,7 +78,14 @@
           ))
 (select-module kahua.config)
 
-(define *kahua-conf-default* "##sysconfdir##/kahua.conf")
+(define-constant *kahua-conf-default* "##sysconfdir##/kahua.conf")
+(define-constant *kahua-working-directory-default* "##localstatedir##")
+(define-constant *kahua-socket-base-default* "unix:##SOCKET_BASE_DIR##")
+(define-constant *kahua-cgilog-directory-default* "##KAHUA_CGI_LOGPATH##")
+(define-constant *kahua-etc-directory-default* "##sysconfdir##")
+(define-constant *kahua-static-document-path-default* "##KAHUA_STATICDIR##")
+(define-constant *kahua-static-document-url-default* "/##package##")
+(define-constant *kahua-userconf-file-default* "##localstatedir##/user.conf")
 
 (define-class <kahua-custom> ()
   ((site-root :init-keyword :site-root :init-value #f)
@@ -86,13 +93,13 @@
    ;;     other various info.  This directory must be writable by
    ;;     kahua processes.
    (working-directory :init-keyword :working-directory
-                      :init-value "##localstatedir##" :place :site)
+                      :init-value *kahua-working-directory-default* :place :site)
 
    ;; sockbase - specifies where to open the server socket.
    ;;     Currently only unix domain socket is supported.
    ;;     The socket directory must be writable by kahua processes.
    (sockbase          :init-keyword :sockbase
-                      :init-value "unix:##SOCKET_BASE_DIR##" :place :site)
+                      :init-value *kahua-socket-base-default* :place :site)
 
    (app-servers :init-keyword :app-servers :init-value "app-servers" :place :wdir)
 
@@ -121,21 +128,18 @@
 			:init-value "tmp" :place :wdir)
 
    (log-directory :init-keyword :log-directory :init-value "logs" :place :wdir)
-   (cgilog-directory :init-keyword :cgilog-directory :init-value "##KAHUA_CGI_LOGPATH##"
-		     :place :site)
+   (cgilog-directory :init-keyword :cgilog-directory :init-value *kahua-cgilog-directory-default* :place :site)
    (run-directory :init-keyword :run-directory :init-value "" :place :wdir)
-   (etc-directory :init-keyword :etc-directory :init-value "##sysconfdir##" :place :site)
+   (etc-directory :init-keyword :etc-directory :init-value *kahua-etc-directory-default* :place :site)
 
    ;; static-document-path - where kahua process puts static documents.
    ;;     Httpd must be able to show the contents under this directory.
    ;;     This directoy must be writable by kahua processes.
-   (static-document-path :init-keyword :static-document-path
-                         :init-value "##KAHUA_STATICDIR##" :place :site)
+   (static-document-path :init-keyword :static-document-path :init-value *kahua-static-document-path-default* :place :site)
 
    ;; static-document-url - the url path to reference the contents of
    ;;     static-document-path via httpd.
-   (static-document-url  :init-keyword :static-document-url
-                         :init-value "/##package##")
+   (static-document-url  :init-keyword :static-document-url :init-value *kahua-static-document-url-default*)
    
    (default-database-name :init-keyword :default-database-name :init-value "db")
 
@@ -151,7 +155,7 @@
 
    ;; userconf-file - developer account file
    (userconf-file :init-keyword :userconf-file
-		  :init-value "##localstatedir##/user.conf" :place :site)
+		  :init-value *kahua-userconf-file-default* :place :site)
 
    (spvr-concurrency :init-keyword :spvr-concurrency :init-value 10)
 
@@ -227,11 +231,13 @@
     (make-directory* (kahua-template-directory))
     ))
 
+;; Read configuration from path.
+;; If path does not exist, is not readable or contains
+;; no configuration expression, raise error.
 (define (read-config path)
-  (and-let* ((l (call-with-input-file path
-		  (lambda (in) (and in (read in)))
-		  :if-does-not-exist #f)))
-    (match l (('make '<kahua-config> . options) options))))
+  (and-let* ((l (file->sexp-list path)))
+    (guard (e (else (error "Cannot parse configuration file:" path)))
+      (match l ((('make '<kahua-config> . options)) options)))))
 
 ;; kahua-init [conf-file] [skip-check?]
 ;; if "skip-check?" is #t, read kahua.conf only(not check 
